# living-world

./: .gitignore  CONTRIBUTING.md  Justfile  KNOWN_ISSUES.md  Makefile  README.md  docker-compose.yml  lw  package-lock.json  package.json  pyproject.toml  schemas  settings.yaml  state.json  tsconfig.base.json
.github/workflows/: test.yml
.streamlit/: config.toml
api-schema/: openapi.json
dashboard-tauri/: index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts
dashboard-tauri/scripts/: check-bundle-size.mjs
dashboard-tauri/src/: App.tsx  api.ts
dashboard-tauri/src-tauri/: Cargo.toml  tauri.conf.json
dashboard-tauri/src-tauri/src/: lib.rs
dashboard-tauri/src/components/: AgentPanel.tsx  BottomCard.tsx  LibraryModal.tsx  MapCanvas.tsx  SettingsModal.tsx  SocialPanel.tsx  TopBar.tsx  WorldPanel.tsx
dashboard-tauri/src/lib/: result.ts
dashboard-tauri/src/stores/: worldStore.ts
dashboard-tauri/src/styles/: theme.css
dashboard-tauri/src/types/: api.generated.ts  api.ts
dashboard-tauri/test/: TopBar.test.tsx  api.test.ts  setup.ts
docs/: HISTORY.md  README.md  architecture.md  flow-loops.md  lbs-infrastructure.md  mvp-roadmap.md  next-steps.md  product-direction.md  stat-machine-design.md  tech-glossary.md  ui-redesign-spec.md
docs/adr/: 0001-three-layer-stack.md  0002-tier-llm-routing.md  0003-conscience-as-system-2.md  0004-chronicler-non-interventionist.md  0005-typed-cross-layer-contract.md
living_world/: __init__.py  __main__.py  cli.py  config.py  factory.py  invariants.py  locale.py  persistence.py  phases.py  queries.py  storyteller.py  tick_logger.py  tick_loop.py  world_pack.py
living_world/agents/: __init__.py  chronicler.py  conscience.py  dialogue.py  emergent.py  event_curator.py  move_advisor.py  narrator.py  perception.py  planner.py  reflector.py  self_update.py
living_world/core/: __init__.py  agent.py  event.py  tile.py  world.py
living_world/dashboard/: __init__.py  app.py  build.py  canvas_map.py  codex.py  controls.py  map_view.py  styles.css
living_world/i18n/: __init__.py  translator.py
living_world/llm/: __init__.py  base.py  dialogue.py  mock.py  move_advisor.py  ollama.py  router.py
living_world/memory/: __init__.py  embedding.py  memory_store.py
living_world/metrics/: __init__.py  social.py
living_world/persistence/: __init__.py  memory_repo.py  postgres_repo.py  repository.py
living_world/rules/: consequences.py  decay.py  heat.py  historical_figures.py  interactions.py  movement.py  resolver.py  storyteller.py
living_world/statmachine/: __init__.py  conscious.py  consciousness.py  consequences.py  debate.py  historical_figures.py  importance.py  interactions.py  movement.py  resolver.py
living_world/storyteller/: __init__.py  tile_storyteller.py
living_world/web/: __init__.py  __main__.py  schemas.py  server.py
living_world/world_pack/: __init__.py  loader.py
reports/: diversity.py
reports/__marimo__/session/: diversity.py.json
scripts/: build_sidecar.py  dump_openapi.py  lw_sidecar_entry.py
sql/: init.sql
tests/: test_api_integration.py  test_consequences.py  test_i18n.py  test_importance.py  test_live_ollama.py  test_llm_decisions.py  test_locale.py  test_memory.py  test_new_modules.py  test_persistence.py  test_simulation_invariants.py  test_smoke.py
world_packs/cthulhu/: pack.yaml
world_packs/cthulhu/events/: daily.yaml  drama.yaml  extra.yaml  investigation.yaml  routine.yaml  spotlight.yaml
world_packs/cthulhu/personas/: antiquarian-thorne.yaml  cultist-marsh.yaml  cultist-whateley.yaml  dagon.yaml  deep-one-hybrid.yaml  detective-legrasse.yaml  dr-carter.yaml  dreamer-pickman.yaml  dunwich-farmer.yaml  great-cthulhu.yaml  innsmouth-hybrid.yaml  investigator-armitage.yaml  journalist-kane.yaml  librarian-emily.yaml  medium-esther.yaml  mi-go-envoy.yaml  nyarlathotep.yaml  professor-peaslee.yaml  researcher-wilmarth.yaml  sheriff-briggs.yaml
world_packs/cthulhu/tiles/: site_tiles.yaml
world_packs/liaozhai/: pack.yaml
world_packs/liaozhai/events/: daily.yaml  drama.yaml  extra.yaml  relationships.yaml  routine.yaml  spotlight.yaml  supernatural.yaml
world_packs/liaozhai/personas/: county-magistrate.yaml  feng-sheng.yaml  huang-xiuer.yaml  innkeeper-li.yaml  li-shi-ghost.yaml  lianxiang.yaml  lu-panniang.yaml  ma-jie.yaml  nie-xiaoqian.yaml  ning-caichen.yaml  old-monk.yaml  sang-sheng.yaml  shiyi-niang.yaml  tailor-zhao.yaml  xi-fangping.yaml  xiaocui.yaml  xin-shisi.yaml  yaksha-shi.yaml  yingning.yaml  zhu-erdan.yaml
world_packs/liaozhai/tiles/: site_tiles.yaml
world_packs/scp/: pack.yaml
world_packs/scp/events/: anomaly.yaml  daily.yaml  drama.yaml  extra.yaml  (+3 more)
(+31 files in other folders)
