[project]
name = "living-world"
version = "0.1.0"
description = "Stage A MVP — No-player, non-VR, auto-running virtual world simulator."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
]

[project.optional-dependencies]
ui = [
    "streamlit>=1.38",
    "streamlit-autorefresh>=1.0",
]
db = [
    "psycopg[binary]>=3.2",
    "redis>=5.0",
    "pgvector>=0.3",
]
llm = [
    "openai>=1.40",  # OpenAI-compatible endpoint for Qwen3 / Gemma / DeepSeek
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    "mypy>=1.10",
    "streamlit>=1.38",
    "streamlit-autorefresh>=1.0",
]

[project.scripts]
world-sim = "living_world.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"
