[project]
name = "living-world"
version = "0.1.0"
description = "Stage A MVP — No-player, non-VR, auto-running virtual world simulator."
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0",
    "typer>=0.12",
    "rich>=13.7",
    "httpx>=0.27",
    # FastAPI moved to base — it's the canonical IPC layer for the
    # Tauri dashboard, not optional. `lw serve` relies on it.
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
]

[project.optional-dependencies]
# `[dev]` is the only extra — kept deliberately minimal. Removed extras
# that represented aspiration (not running code):
#   - `[ui]` / Streamlit dashboard: replaced by dashboard-tauri/
#   - `[db]` / psycopg+pgvector+redis: no repository implementation binds
#   - `[llm]` / openai SDK: Ollama is the only runtime we call
# If/when we need them, add back with a concrete consumer in the same PR.
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
    # basedpyright — stricter than mypy, faster, better diagnostics.
    # Replaces mypy in the `just check` pipeline.
    "basedpyright>=1.13",
    # L-21: PyInstaller bundles `living_world.web` into a single binary
    # for Tauri's `bundle.externalBin`. Dev-only because production
    # users get the prebuilt binary inside the .app/.exe; only release
    # engineers need to run `make build-sidecar` themselves.
    "pyinstaller>=6.10",
]

[project.scripts]
lw = "living_world.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
# Start with sensible defaults; tighten in follow-ups.
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # bugbear
    "UP",   # pyupgrade
]
ignore = [
    "E501",  # line length (ruff formatter handles wrapping)
    "B008",  # function calls in defaults (typer uses this)
]

[tool.ruff.lint.per-file-ignores]
# Tests use compact `w.add_x(a); w.add_x(b)` setup patterns deliberately.
"tests/**/*.py" = ["E702", "E741", "F841", "B007"]

[tool.basedpyright]
# Start lenient; tighten as we fix existing issues.
include = ["living_world"]
exclude = ["**/__pycache__", "tests", "packages"]
pythonVersion = "3.11"
typeCheckingMode = "standard"
reportMissingImports = "error"
reportUnusedImport = "warning"
reportUnusedVariable = "warning"
# These are blockers we want to see right away:
reportUndefinedVariable = "error"
reportAttributeAccessIssue = "warning"
