[package]
name = "dashboard-tauri"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dashboard_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# Sidecar: spawn the Python sim API on startup, kill it on shutdown.
# `tokio` features are minimal — no HTTP client; readiness is a TCP-connect
# probe to the sidecar port (uvicorn binds AFTER FastAPI is ready, so a
# successful connect == app is up). Avoids pulling in reqwest's tree.
tokio = { version = "1", features = ["rt-multi-thread", "process", "net", "time"] }

